@@ -3,6 +3,7 @@ CatRadio
 (+ New, * Updated, - Removed)
 
 1.4.0 - 2023-mm-dd
+	+ Auto Power-on option
 	+ High SWR indicator
 	+ Meter peak hold indicator
 	+ Debug mode
